--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LEpeeNice</string>
+    <string name="home">Accueil</string>
+    <string name="shop">Magasin</string>
 </resources>
