--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LEpeeNice</string>
-    <string name="home">Accueil</string>
+    <string name="home">Jeu</string>
     <string name="shop">Magasin</string>
+    <string name="param">Paramètre</string>
 </resources>
